fixing pictures test

--- a/Research/dic.html
+++ b/Research/dic.html
@@ -13,7 +13,7 @@
   <TABLE cellSpacing=10>
   	<p style="font-size:30px">
   <tr>
-  	<td> <video SRC="http://www.juangmendoza.com/Media/dic_Trim.mp4" width=240 height=424 muted autoplay loop></td>
+  	<td> <video SRC="../Media/dic_Trim.mp4" width=240 height=424 muted autoplay loop></td>
   <TD width=700 border="0">
 
 <p style="font-size:25px"><br><br> My research advisor, Dr. Florin, came to me one day and proposed I worked on a project one of his previous graduate students (now Dr. Foote) left unfinished. The project consisted of analyzing pixel fluctuations of DIC microscopy images to determine the movement of particles that are too small to be resolved by the microscope. 
