fixing pictures dic

--- a/Research/dic.html
+++ b/Research/dic.html
@@ -28,7 +28,7 @@
 </tr>
 <tr>
 	<td colspan="2">
-	<img src="http://www.juangmendoza.com/Media/sample.png">
+	<img src="../Media/sample.png">
 	</td>
 </tr>
 <tr>
@@ -45,7 +45,7 @@
 <tr>
 	<td colspan="2" width = 700>
 	<!--<img src="../Media/sample_holder.gif">-->
-	<video src="http://www.juangmendoza.com/Media/sample_holder.mp4" autoplay muted loop>
+	<video src="../Media/sample_holder.mp4" autoplay muted loop>
 	</td>
 </tr>
 <tr>
@@ -55,7 +55,7 @@
 </tr>
 <tr>
 	<td colspan="2" width = 700>
-	<img src="http://www.juangmendoza.com/Media/sample_holder2.jpeg" style="width:400px;height:533.33px;"><img src="../Media/sample_holder1.jpeg" style="width:400px;height:533.33px;">
+	<img src="../Media/sample_holder2.jpeg" style="width:400px;height:533.33px;"><img src="../Media/sample_holder1.jpeg" style="width:400px;height:533.33px;">
 	
 	
 	</td>
@@ -68,7 +68,7 @@
 </tr>
 <tr>
 	<td colspan="2" width = 700>
-	<video src="http://www.juangmendoza.com/Media/sample_holder2.mp4" width="400" height="533.33" autoplay muted loop>
+	<video src="../Media/sample_holder2.mp4" width="400" height="533.33" autoplay muted loop>
 	</td>
 </tr>
 <tr>
