--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
     <meta name="author" content="">
+    <meta property="og:image" content="../Media/icon.png">
     <link rel="icon" href="/docs/4.0/assets/img/favicons/favicon.ico">
     <link rel="stylesheet" type="text/css" href="mystyle.css">
     <title>Juan G Mendoza</title>
@@ -16,6 +16,7 @@
 
     <!-- Custom styles for this template -->
     <link href="album.css" rel="stylesheet">
+
   </head>
 
   
