--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="author" content="">
-    <meta property="og:image" content="./Media/iconBig.png">
+    <meta property="og:image" content="./Media/iconBig.PNG">
     <link rel="icon" href="/docs/4.0/assets/img/favicons/favicon.ico">
     <link rel="stylesheet" type="text/css" href="mystyle.css">
     <title>Juan G Mendoza</title>
@@ -68,7 +68,7 @@
             </div>
             <div class="col-sm-4 card text-center ">
                 <a href='https://JuanGMendoza.com/resume.html'>
-                <img class="card-img-top " src="./Media/CaseComp.PNG" />
+                <img class="card-img-top " src="./Media/iconBig.PNG" />
                 <div class="card-body">
                     <h4 class="card-title links"> Resume </h4>
 
