testing preview image 4

--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="author" content="">
+    <meta property='og:title' content='Juan G Mendoza'/>
     <meta property="og:image" content="./Media/iconBig.PNG">
+    <meta property='og:description' content='Personal Website'/>
+    <meta property='og:url' content='https://www.JuanGMendoza.com'/>
     <link rel="icon" href="/docs/4.0/assets/img/favicons/favicon.ico">
     <link rel="stylesheet" type="text/css" href="mystyle.css">
     <title>Juan G Mendoza</title>
