--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="author" content="">
     <meta property='og:title' content='Juan G Mendoza'/>
-    <meta property="og:image" content="./Media/iconBig.PNG">
+    <meta property="og:image" content="https://juangmendoza.com/Media/iconBig.PNG">
     <meta property='og:description' content='Personal Website'/>
     <meta property='og:url' content='https://www.JuanGMendoza.com'/>
     <link rel="icon" href="/docs/4.0/assets/img/favicons/favicon.ico">
