testing preview image 6

--- a/resume.html
+++ b/resume.html
@@ -2,6 +2,7 @@
 <HTML><HEAD><TITLE>Resume</TITLE><link rel="icon" href="Media/icon.png">
 <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+<meta property="og:image" content="https://juangmendoza.com/Media/iconBig.PNG">
 </HEAD>
 <div id="nav-placeholder">
 
