--- a/rd.html
+++ b/rd.html
@@ -1,4 +1,10 @@
+
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<HTML><HEAD><TITLE>Resume</TITLE><link rel="icon" href="Media/icon.png">
+<script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 <meta property="og:image" content="https://juangmendoza.com/Media/iconBig.PNG">
+</HEAD>
 
 <meta http-equiv="Refresh" content="0; url='https://juangmendoza.com'" />
 
