--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             </div>
             <div class="col-sm-4 card text-center ">
                 <a href='https://JuanGMendoza.com/resume.html'>
-                <img class="card-img-top " src="./Media/iconBig.PNG" />
+                <img class="card-img-top " src="./Media/CaseComp.PNG" />
                 <div class="card-body">
                     <h4 class="card-title links"> Resume </h4>
 
