--- a/rd.html
+++ b/rd.html
@@ -1,6 +1,6 @@
 
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<HTML><HEAD><TITLE>Resume</TITLE><link rel="icon" href="Media/icon.png">
+<HTML><HEAD><TITLE>Redirect</TITLE><link rel="icon" href="Media/icon.png">
 <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 <meta property="og:image" content="https://juangmendoza.com/Media/iconBig.PNG">
 </HEAD>
