changed mp4 to gifs in DIC

--- a/Research/dic.html
+++ b/Research/dic.html
@@ -13,7 +13,7 @@
   <TABLE cellSpacing=10>
   	<p style="font-size:30px">
   <tr>
-  	<td> <video SRC="../Media/dic_Trim.mp4" width=240 height=424 muted autoplay loop></td>
+  	<td> <img SRC="../Media/dic_Trim.gif" width=240 height=424 ></td>
   <TD width=700 border="0">
 
 <p style="font-size:25px"><br><br> My research advisor, Dr. Florin, came to me one day and proposed I worked on a project one of his previous graduate students (now Dr. Foote) left unfinished. The project consisted of analyzing pixel fluctuations of DIC microscopy images to determine the movement of particles that are too small to be resolved by the microscope. 
@@ -45,7 +45,7 @@
 <tr>
 	<td colspan="2" width = 700>
 	<!--<img src="../Media/sample_holder.gif">-->
-	<video src="../Media/sample_holder.mp4" autoplay muted loop>
+	<img src="../Media/sample_holder.gif">
 	</td>
 </tr>
 <tr>
@@ -68,7 +68,7 @@
 </tr>
 <tr>
 	<td colspan="2" width = 700>
-	<video src="../Media/sample_holder2.mp4" width="400" height="533.33" autoplay muted loop>
+	<img src="../Media/sample_holder2.gif" width="400" height="533.33" >
 	</td>
 </tr>
 <tr>
