added more writings

--- a/writings.html
+++ b/writings.html
@@ -15,9 +15,24 @@
   <TR>
 
     <TD width=700 border="0">
-    <HR>
-  	This page is still under construction! Here I will upload short writtings about various topics ranging from physics to coding to philosophy.
-  <HR>
+
+    <h4>Physics</h4>
+    <br>
+    <h6>Misc</h6>
+    <ul>
+      
+      <li><a href="Media/Vaidman_s_Bomb.pdf">Elitzur-Vaidman's Bomb summary and its
+          consequences </a></li>
+    <br>
+    </ul>
+    <h6>Modern Physics Experiment Papers</h6>
+    <ul>
+      
+        <li><a href="Media/Speed_of_Light.pdf">Measuring the speed of light with rotating mirrors </a></li>
+        <li><a href="Media/Franck_Hertz.pdf"> </a>Franck-Hertz Experiment</li>
+        <li><a href="Media/Photoelectric_Effect.pdf"> </a>The Photoelectric Effect</li>
+        <li><a href="Media/Electron_Diffraction.pdf"> </a>The Wave Nature of Electrons</li>
+    </ul>
   	<h4>Blog</h4>
   	<ul>
   		<li><a href="blog1.html">Fall semester start 09/11/20 </a></li>
