--- a/writings.html
+++ b/writings.html
@@ -29,9 +29,9 @@
     <ul>
       
         <li><a href="Media/Speed_of_Light.pdf">Measuring the speed of light with rotating mirrors </a></li>
-        <li><a href="Media/Franck_Hertz.pdf"> </a>Franck-Hertz Experiment</li>
-        <li><a href="Media/Photoelectric_Effect.pdf"> </a>The Photoelectric Effect</li>
-        <li><a href="Media/Electron_Diffraction.pdf"> </a>The Wave Nature of Electrons</li>
+        <li><a href="Media/Franck_Hertz.pdf"> </a>Franck-Hertz Experiment</a></li>
+        <li><a href="Media/Photoelectric_Effect.pdf"> </a>The Photoelectric Effect</a></li>
+        <li><a href="Media/Electron_Diffraction.pdf"> </a>The Wave Nature of Electrons</a></li>
     </ul>
   	<h4>Blog</h4>
   	<ul>
