--- a/Research/dic.html
+++ b/Research/dic.html
@@ -16,14 +16,14 @@
   	<td> <img SRC="../Media/dic_Trim.gif" width=240 height=424 ></td>
   <TD width=700 border="0">
 
-<p style="font-size:25px"><br><br> My research advisor, Dr. Florin, came to me one day and proposed I worked on a project one of his previous graduate students (now Dr. Foote) left unfinished. The project consisted of analyzing pixel fluctuations of DIC microscopy images to determine the movement of particles that are too small to be resolved by the microscope. 
+<p style="font-size:25px"><br><br> My research advisor, Dr. Florin, came to me one day and proposed I worked on a project one of his previous graduate students left unfinished. The project consisted of analyzing pixel fluctuations of DIC microscopy images to determine the movement of particles that are too small to be resolved by the microscope. 
 </p>
 </TD>
 </tr>
 <tr>
 	<td colspan="2" width = 700>
 	<p style="font-size:25px">
-	<br>After a week or two of learning the physics behind DIC, we spent a good amount of time figuring out the equipment, since this project had been abandoned for a few years. We were able to find a procedure guide that was written by Dr. Foote on how to prepare the samples. These consisted of a droplet of water with plastic beads placed on top of a rectangular coverslip, which would then be covered with a circular coverslip. This can be depicted in the picture below.</p>
+	<br>After a week or two of learning the physics behind DIC, we spent a good amount of time figuring out the equipment, since this project had been abandoned for a few years. We were able to find a procedure guide that was written on how to prepare the samples. These consisted of a droplet of water with plastic beads placed on top of a rectangular coverslip, which would then be covered with a circular coverslip. This can be depicted in the picture below.</p>
 	</td>
 </tr>
 <tr>
