--- a/resume.html
+++ b/resume.html
@@ -131,7 +131,7 @@
   <ul>
     Physics:
     <ul>
-      <li>Gruaduate Quantum Mechanics I, <a href="https://en.wikipedia.org/wiki/Steven_Weinberg">Dr. Weinberg</a> 
+      <li>Graduate Quantum Mechanics I, <a href="https://en.wikipedia.org/wiki/Steven_Weinberg">Dr. Weinberg</a> 
       <li>Quantum Information, <a href="https://en.wikipedia.org/wiki/Scott_Aaronson">Dr. Aaronson</a>
       <li>Quantum Mechanics I, Dr. Caceres 
       <li>Quantum Mechanics II, Dr. Yeazell
