--- a/aboutme.html
+++ b/aboutme.html
@@ -15,7 +15,7 @@
   <TR>
     <TD width=550 border="0">
       <HR>
-      <br>Ia am an undergraduate student at The University of Texas at Austin (UT) majoring in Computer Science and Physics with a certificate in Quantum Information. I am expecting to graduate in May 2021 and continue my education by pursuing a Ph.D. in physics. I am interested in researching complex quantum systems, special and general relativity, and quantum information. 
+      <br>I recently graduated from The University of Texas at Austin (UT) with degrees in Computer Science and Physics and a certificate in Quantum Information. I am starting a Physics Ph.D. track at the University of New Mexico with a focus (most likely) in quantum computing.
 
   <p><b>Background</b>
   <ul>I was born and raised in Venezuela in a sugar cane farm and alcohol distillery called Central Matilde built by my great grandparents after migrating from Cuba. Close to my highschool graduation, due to the deteriorating situation of the country, my parents decided it was best for me not to get my undergraduate degree in Venezuela. I moved to Texas, spent 2 years at Austin Community College, and then transferred to UT as a Computer Science student. 
