final crypto push hopefully

--- a/blog1.html
+++ b/blog1.html
@@ -25,6 +25,8 @@ I fell in love with special relativity when I was introduced to it in Modern Phy
 
 <p>Over the summer I made my own custom smart home, but that probably deserves its own post. 
 
+	<p>ETCMA
+
 </td></tr></table>
 
 </P></BODY>
