Combined "blog" and "writings" pages

--- a/index.html
+++ b/index.html
@@ -30,15 +30,6 @@
           </article>
 
           <article>
-            <a href="/blog/">
-              <img src="./blog/YYYYMMDD-template/title-card.png" alt="Blog Page Image" />
-            </a>
-            <h2>
-              <a href="/blog/">Blog</a>
-            </h2>
-          </article>
-
-          <article>
             <a href="/research/">
               <img src="./home/assets/research.gif" alt="Resume Page Image" />
             </a>
@@ -61,7 +52,7 @@
               <img src="./home/assets/writings.png" alt="Writings Page Image" />
             </a>
             <h2>
-              <a href="/writings/">(TODO) Writings</a>
+              <a href="/writings/">Writings</a>
             </h2>
           </article>
 
