--- a/writings/YYYYMMDD-template/index.html
+++ b/writings/YYYYMMDD-template/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="/icon.png">
     <link rel="stylesheet" type="text/css" href="/main.css">
-    <link rel="stylesheet" type="text/css" href="/blog/index.css">
+    <link rel="stylesheet" type="text/css" href="/writings/index.css">
     <script src="/includes/social_media_card.js"></script>
   </head>
   <body>
@@ -18,10 +18,7 @@
       <div class="wrapper">
 
         <article>
-          <section id="breadcrumbs">
-            <a href="/">Home</a>/
-            <a href="/blog/">Blog</a>/
-          </section>
+          <script src="/includes/blogpost_breadcrumbs.js"></script>
 
           <section id="overview">
             <h1>{Template Post Title}</h1>
@@ -32,11 +29,11 @@
           <h2 style="color:red;">Your blog post's tags go here!</h2>
           <p>
             Read the two explainer posts
-            <a href="/blog/20230113-blog_design_intro/">
+            <a href="/writings/20230113-blog_design_intro/">
               here (directory structure and layout)
             </a> and
-            <a href="/blog/20230113-blog_post_tags/">here (tags)</a> for more
-            thorough details.
+            <a href="/writings/20230113-blog_post_tags/">here (tags)</a> for
+            more thorough details.
           </p>
           <p>
             Copy this file to the directory of your new blog post, and
