--- a/writings/20230113-blog_design_intro/index.html
+++ b/writings/20230113-blog_design_intro/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>Blog Template Intro | Juan Gonzalez De Mendoza</title>
-    <meta name="description" content="Introduction to the blog page and blog post template." />
+    <meta name="description" content="Introduction to the writings page and blog post template." />
     <meta name="theme-color" content="#ffffff" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="/icon.png">
     <link rel="stylesheet" type="text/css" href="/main.css">
-    <link rel="stylesheet" type="text/css" href="/blog/index.css">
+    <link rel="stylesheet" type="text/css" href="/writings/index.css">
     <script src="/includes/social_media_card.js"></script>
   </head>
   <body>
@@ -18,23 +18,22 @@
       <div class="wrapper">
 
         <article>
-          <section id="breadcrumbs">
-            <a href="/">Home</a>/
-            <a href="/blog/">Blog</a>/
-          </section>
+          <script src="/includes/blogpost_breadcrumbs.js"></script>
+
           <section id="overview">
             <h1>Blog Design Intro</h1>
             <span class="date-text">January 12th, 2023</span>
           </section>
+
           <p>
             Hello! This is the new blog post page design.
           </p>
           <h2>Directory Structure</h2>
           <p>
             Note that each blog post lives in its own sub-directory within the
-            "blog" directory. This allows you to group all assets with its blog
-            post HTML file. This shortens pathnames for any assets you will call
-            in the HTML, and makes it easier to manage the assets.
+            "writings" directory. This allows you to group all assets with its
+            blog post HTML file. This shortens pathnames for any assets you will
+            call in the HTML, and makes it easier to manage the assets.
           </p>
           <p>
             Also, each blog post HTML file should be named "index.html" within
@@ -42,18 +41,18 @@
             link without mentioning the HTML file by name. For instance, this
             post's URL will be:
           </p>
-          <code>https://juangmendoza.com/blog/20230113-blog_design_intro/</code>
+          <code>https://juangmendoza.com/writings/20230113-blog_design_intro/</code>
           <p>
             I have used the naming scheme YYYYMMDD-{blog_post_title}.
             If you'd rather simplify the links further, you can instead name
             your blog post directories in numerical order. With that method,
             this article's URL could instead be:
           </p>
-          <code>https://juangmendoza.com/blog/0/</code>
+          <code>https://juangmendoza.com/writings/0/</code>
           <p>
             ...and the next would be...
           </p>
-          <code>https://juangmendoza.com/blog/1/</code>
+          <code>https://juangmendoza.com/writings/1/</code>
           <p>
             Using ordered numbers has the benefit of making your URL's shorter,
             but also makes them less descriptive. Any method works, so long as
@@ -149,11 +148,11 @@
             This article discussed the directory and HTML structure of the blog
             post template. Notice that this article intentionally does not have
             a sidebar. The
-            <a href="/blog/20230113-blog_design_intro">next article</a> will
+            <a href="/writings/20230113-blog_post_tags">next article</a> will
             discuss the different tags you can use for the blog posts, and will
             contain the sidebar.
           </p>
-          <a href="/blog/20230113-blog_post_tags/">Next: Blog Post Tags</a>
+          <a href="/writings/20230113-blog_post_tags/">Next: Blog Post Tags</a>
         </article>
       </div>
     </main>
