Combined "research" and "writings" pages

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="wrapper">
         <h1 style="text-align:center;">Juan Gonzalez De Mendoza</h1>
 
-        <div class="grid">
+        <div class="article-grid">
 
           <article>
             <a href="/about/">
@@ -26,15 +26,6 @@
             </a>
             <h2>
               <a href="/about/">About Me</a>
-            </h2>
-          </article>
-
-          <article>
-            <a href="/research/">
-              <img src="./home/assets/research.gif" alt="Resume Page Image" />
-            </a>
-            <h2>
-              <a href="/research/">(TODO) Research</a>
             </h2>
           </article>
 
