--- a/writings/index.html
+++ b/writings/index.html
@@ -15,14 +15,14 @@
     <script src="/includes/header.js"></script>
 
     <main id="writings">
-      <div class="wrapper">
+      <div class="wrapper article-gallery">
         <section id="breadcrumbs">
           <a href="/">Home</a>/
         </section>
         <h1>Writings</h1>
 
         <!-- ↓↓↓ remove me or comment me out ↓↓↓ -->
-        <h2>Writings Page Info</h2>
+        <h2>Writings Page Info (to be removed or commented out)</h2>
         <p>
           You can mix and match grid-style links and list-style links on this
           page. Title images are not required for grid-style links, but they
@@ -31,14 +31,14 @@
         <p>
           To add a new section of links, you can create an &lt;h2&gt; tag with
           your section title, then a div with either class="grid" or
-          class="blogs-list". For each new article entry in this section, create
+          class="article-list". For each new article entry in this section, create
           an &lt;article&gt; tag within the div (see examples below).
         </p>
         <i>
           Note: Having paragraphs of explanation text before each section is
           totally optional. You can just alternate between &lt;h2&gt; and
-          &lt;div class="grid/blog-list"&gt; to make sections, or even just have
-          one big &lt;div class="grid/blog-list"&gt; for all articles on the
+          &lt;div class="grid/article-list"&gt; to make sections, or even just have
+          one big &lt;div class="grid/article-list"&gt; for all articles on the
           page.
         </i>
         <p>
@@ -48,7 +48,7 @@
           The blog post articles in the following section also explain the
           <b>Blog Post HTML Template</b>.
         </p>
-        <div class="grid">
+        <div class="article-grid">
           <article>
             <a href="./20230112-blog_design_intro/">
               <img src="./20230112-blog_design_intro/title-card.png" alt="Blog Post Design Intro Title Card" />
@@ -89,7 +89,7 @@
         <!-- ↑↑↑ remove me or comment me out ↑↑↑ -->
 
         <h2>Physics Papers</h2>
-        <div class="blogs-list">
+        <div class="article-list">
           <h3>Miscellaneous</h3>
           <article>
             <h4>
@@ -125,7 +125,7 @@
         </div>
 
         <h2>Blog Posts</h2>
-        <div class="grid">
+        <div class="article-grid">
           <article>
             <a href="./20200909-fall_semester_start/">
               <img src="./20200909-fall_semester_start/title-card.png" alt="Fall Semester Start Title Card" />
@@ -137,6 +137,22 @@
             <p>
               Reflections on the 2020 Fall Semester so far.
             </p>
+          </article>
+        </div>
+
+        <h2>Research</h2>
+        <p>
+          The purpose of this section on my website is to have a keepsake for
+          myself of all the research I have done. I will upload all the new
+          research I do here, especially as I start grad school in 2021.
+        </p>
+        <div class="article-list">
+          <h3>Biophysics</h3>
+          <article>
+            <h4>
+              <a href="./20201210-particle_tracking/">Sub-Microscopic Particle Tracking</a>
+            </h4>
+            <span class="date-text">December 12th, 2020</span>
           </article>
         </div>
 
