Tweak Header Links and Writings Page Intro Section

--- a/writings/index.html
+++ b/writings/index.html
@@ -30,22 +30,23 @@
         </p>
         <p>
           To add a new section of links, you can create an &lt;h2&gt; tag with
-          your section title, then a div with either class="grid" or
+          your section title, then a div with either class="article-grid" or
           class="article-list". For each new article entry in this section, create
           an &lt;article&gt; tag within the div (see examples below).
         </p>
         <i>
-          Note: Having paragraphs of explanation text before each section is
-          totally optional. You can just alternate between &lt;h2&gt; and
-          &lt;div class="grid/article-list"&gt; to make sections, or even just have
-          one big &lt;div class="grid/article-list"&gt; for all articles on the
+          Note: Having paragraphs of explanation text before each section (like
+          what is done for this intro section) is totally optional. You can just
+          alternate between &lt;h2&gt; and &lt;div class="grid/article-list"&gt;
+          to make sections, or even just have one big
+          &lt;div class="article-grid/article-list"&gt; for all articles on the
           page.
         </i>
         <p>
-          The following section demonstrates a <b>Grid-Style</b> section of
+          This intro section demonstrates a <b>Grid-Style</b> section of
           articles, and the section after that demonstrates a <b>List-Style</b>
           section of articles.
-          The blog post articles in the following section also explain the
+          The blog post articles in this intro section also explain the
           <b>Blog Post HTML Template</b>.
         </p>
         <div class="article-grid">
@@ -70,7 +71,8 @@
             </h3>
             <span class="date-text">January 13th, 2023</span>
             <p>
-              Here is some description text instead of having the title image.
+              Description of various tags that can be used in the blog post
+              template.
             </p>
           </article>
           <article>
@@ -81,8 +83,8 @@
               <a href="./YYYYMMDD-template/">{Blog Post Template}</a>
             </h3>
             <p>
-              Blog post template HTML that can be copy/pasted to create new blog
-              posts.
+              Blog post template HTML file that can be copy/pasted to create
+              new blog posts.
             </p>
           </article>
         </div>
