Renamed "includes" to "_includes" and "unused" to "_unused"
To help distinguish the "includes" and "unused" directory from other directories, added an underscore at the beginning of their name.

--- a/writings/20230113-blog_post_tags/index.html
+++ b/writings/20230113-blog_post_tags/index.html
@@ -9,16 +9,16 @@
     <link rel="icon" href="/icon.png">
     <link rel="stylesheet" type="text/css" href="/main.css">
     <link rel="stylesheet" type="text/css" href="/writings/index.css">
-    <script src="/includes/social_media_card.js"></script>
+    <script src="/_includes/social_media_card.js"></script>
   </head>
   <body>
-    <script src="/includes/header.js"></script>
+    <script src="/_includes/header.js"></script>
 
     <main id="blogpost">
       <div class="wrapper">
 
         <article>
-          <script src="/includes/blogpost_breadcrumbs.js"></script>
+          <script src="/_includes/blogpost_breadcrumbs.js"></script>
 
           <section id="overview">
             <h1>Blog Post Tags</h1>
@@ -164,6 +164,6 @@
       </div>
     </main>
 
-    <script src="/includes/footer.js"></script>
+    <script src="/_includes/footer.js"></script>
   </body>
 </html>
