--- a/about/index.html
+++ b/about/index.html
@@ -9,10 +9,10 @@
     <link rel="icon" href="/icon.png">
     <link rel="stylesheet" type="text/css" href="/main.css">
     <link rel="stylesheet" type="text/css" href="/about/index.css">
-    <script src="/includes/social_media_card.js"></script>
+    <script src="/_includes/social_media_card.js"></script>
   </head>
   <body>
-    <script src="/includes/header.js"></script>
+    <script src="/_includes/header.js"></script>
 
     <main id="about">
       <div class="wrapper">
@@ -48,6 +48,6 @@
       </div>
     </main>
 
-    <script src="/includes/footer.js"></script>
+    <script src="/_includes/footer.js"></script>
   </body>
 </html>
