--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <link rel="icon" href="/icon.png">
     <link rel="stylesheet" type="text/css" href="/main.css">
     <link rel="stylesheet" type="text/css" href="/home/index.css">
-    <script src="/includes/social_media_card.js"></script>
+    <script src="/_includes/social_media_card.js"></script>
   </head>
   <body>
-    <script src="/includes/header.js"></script>
+    <script src="/_includes/header.js"></script>
 
     <main id="home">
       <div class="wrapper">
@@ -51,6 +51,6 @@
       </div>  <!-- ./wrapper -->
     </main>
 
-    <script src="/includes/footer.js"></script>
+    <script src="/_includes/footer.js"></script>
   </body>
 </html>
