--- a/writings/YYYYMMDD-template/index.html
+++ b/writings/YYYYMMDD-template/index.html
@@ -9,16 +9,16 @@
     <link rel="icon" href="/icon.png">
     <link rel="stylesheet" type="text/css" href="/main.css">
     <link rel="stylesheet" type="text/css" href="/writings/index.css">
-    <script src="/includes/social_media_card.js"></script>
+    <script src="/_includes/social_media_card.js"></script>
   </head>
   <body>
-    <script src="/includes/header.js"></script>
+    <script src="/_includes/header.js"></script>
 
     <main id="blogpost">
       <div class="wrapper">
 
         <article>
-          <script src="/includes/blogpost_breadcrumbs.js"></script>
+          <script src="/_includes/blogpost_breadcrumbs.js"></script>
 
           <section id="overview">
             <h1>{Template Post Title}</h1>
@@ -54,6 +54,6 @@
       </div>
     </main>
 
-    <script src="/includes/footer.js"></script>
+    <script src="/_includes/footer.js"></script>
   </body>
 </html>
