Footer  Nav Design, Various Tweaks

--- a/about/index.html
+++ b/about/index.html
@@ -23,8 +23,8 @@
         <h1>About Me</h1>
 
         <section id="overview">
-          <figure class="emphasized">
-            <figcaption>Juan G Mendoza</figcaption>
+          <figure>
+            <figcaption class="emphasized">Juan G Mendoza</figcaption>
             <img src="./profile.png" alt="Profile Photo" />
           </figure>
         </section>
