--- a/writings/index.html
+++ b/writings/index.html
@@ -37,9 +37,10 @@
         <i>
           Note: Having paragraphs of explanation text before each section (like
           what is done for this intro section) is totally optional. You can just
-          alternate between &lt;h2&gt; and &lt;div class="grid/article-list"&gt;
-          to make sections, or even just have one big
-          &lt;div class="article-grid/article-list"&gt; for all articles on the
+          alternate between &lt;h2&gt; and
+          &lt;div class="article-grid/article-list"&gt; to make sections, or
+          even just have one big &lt;div class="article-grid/article-list"&gt;
+          for all articles on the
           page.
         </i>
         <p>
