Fixed resume link to research post

--- a/resume/index.html
+++ b/resume/index.html
@@ -118,8 +118,9 @@
               was to be able to estimate the amount of particles moving between
               pixels by analyzing intensity fluctuations. This was due to the
               particles being too small for a DIC microscope to resolve. Check
-              this <a href="Research/dic.html">post</a> to see more of what I
-              managed to do in a month previous to the COVID-19 outbreak.
+              this <a href="/writings/20201210-particle_tracking/">post</a> to
+              see more of what I managed to do in a month previous to the
+              COVID-19 outbreak.
             </p>
             <!--  -->
             <div class="flex">
@@ -397,9 +398,7 @@
           <section id="contact">
             <p>
               The best way to reach me is via email at
-              <a href="mailto:juangmendoza@utexas.edu">
-                juangmendoza@utexas.edu
-              </a>.
+              <a href="mailto:juangmendoza@utexas.edu">juangmendoza@utexas.edu</a>.
             </p>
           </section>
 
