--- a/writings/index.html
+++ b/writings/index.html
@@ -102,7 +102,7 @@
             </h4>
             <span class="date-text">April 2019</span>
           </article>
-          <h3>Modern Physics Experiments</h3>
+          <h3>Modern Experiments</h3>
           <article>
             <h4>
               <a href="./20190400-speed_of_light/Speed_of_Light.pdf">Measuring the speed of light with rotating mirrors</a>
