--- a/resume/index.html
+++ b/resume/index.html
@@ -38,7 +38,8 @@
             <h3>Education</h3>
             <div class="flex">
               <span>
-                <b>&#x2022;</b> Bachelor of Science in Computer Science and Physics
+                <b>&#x2022;</b>
+                Bachelor of Science in Computer Science and Physics
               </span>
               <span>
                 Overall GPA: 3.75
