--- a/writings/20230113-blog_post_tags/index.html
+++ b/writings/20230113-blog_post_tags/index.html
@@ -96,7 +96,7 @@
             values in the CSS. In order to not break the semantic meaning of
             the page by placing an &lt;h1&gt; tag in the middle of the article
             (there should only be one &lt;h1&gt; tag per page), here is a photo
-            of the different heading sizes relative to one another:
+            of how the different heading sizes look relative to each another:
           </p>
           <img src="headings.png" alt="Blog Post Headings" />
 
@@ -104,9 +104,9 @@
           <h2>Images</h2>
           <p>
             Note that each blog post lives in its own sub-directory within the
-            "blog" directory. This allows you to group all assets with its blog
-            post HTML file, and thus your image "src" attribute doesn't need a
-            prefix before the filename.
+            "writings" directory. This allows you to group all assets with its
+            blog post HTML file, and thus your image "src" attribute doesn't
+            need a prefix before the filename.
           </p>
           <p>
             By default, images will take on their actual file width. However,
