--- a/writings/index.html
+++ b/writings/index.html
@@ -58,7 +58,7 @@
               <img src="./20230112-blog_design_intro/title-card.png" alt="Blog Post Design Intro Title Card" />
             </a>
             <h3>
-              <a href="./20230112-blog_design_intro/">1. Blog Post Intro</a>
+              <a href="./20230112-blog_design_intro/">1. Blog Design Intro</a>
             </h3>
             <span class="date-text">January 12th, 2023</span>
             <p>
