--- a/resume/index.html
+++ b/resume/index.html
@@ -397,6 +397,7 @@
           </section>
 
           <section id="contact">
+            <h3>Contact</h3>
             <p>
               The best way to reach me is via email at
               <a href="mailto:juangmendoza@utexas.edu">juangmendoza@utexas.edu</a>.
